# rag-chatbot

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/knowledge/: example.txt
notebooks/: RAG_QA_Chatbot.ipynb
src/: RAG_QA_Chatbot.ipynb
src/rag_chatbot/: app.py  pipeline.py  retriever.py
