[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Q&A Chatbot built with Python + Jupyter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "faiss-cpu>=1.12.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "notebook>=7.4.5",
    "streamlit",
    "sentence-transformers>=5.1.0",
]
